--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "bai1",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon node index",
+    "start": "nodemon node src/index",
     "build": "echo \"Đang chạy câu lệnh build\" "
   },
   "author": "",
@@ -15,6 +15,8 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
+    "express-handlebars": "^7.1.2",
+    "morgan": "^1.10.0",
     "nodemon": "^3.0.2"
   }
 }
